# aquote

./: CHANGELOG.md  Cargo.toml  LICENSE.md  README.md
.github/workflows/: release.yml  tests.yml
config/: default.toml
platform/linux/: install.sh  uninstall.sh
platform/linux/systemd/: aquote-fetch.service  qotd-fetch.service  qotd-fetch.timer  qotdsh-fetch.service
platform/macos/: install.sh  uninstall.sh
platform/macos/launchd/: me.kerlilow.aquote.fetch.plist  me.kerlilow.qotd.fetch.plist  me.kerlilow.qotdsh.fetch.plist
src/: app.rs  lib.rs  main.rs  quote.rs  quote_manager.rs  quote_vendor.rs  settings.rs  subcommands.rs
src/subcommands/: fetch.rs  recent.rs  show.rs
