[package]
name = "qotd"
version = "0.1.0"
authors = ["Kerli Low <kerlilow@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.38"
serde = { version = "1.0.124", features = ["derive"] }
clap = { version = "3.0.0-beta.2", features = ["color"] }
directories = "3.0.1"
config = "0.10.1"
lazy_static = "1.4.0"
reqwest = { version = "0.11.2", features = ["blocking", "json"] }
jq-rs = { version = "0.4.1", features = ["bundled"] }
serde_json = "1.0.64"
chrono = { version = "0.4.19", features = ["serde"] }
rand = "0.8.3"
colored = "2.0.0"
retry = "1.2.0"
