[package]
name = "aquote"
version = "0.1.1"
authors = ["Kerli Low <kerlilow@gmail.com>"]
edition = "2018"
license = "MIT"
homepage = "https://github.com/kerlilow/aquote"
repository = "https://github.com/kerlilow/aquote"
documentation = "https://docs.rs/aquote"
readme = "README.md"
description = "Quote of the day for your shell."
keywords = [
    "quote",
    "qotd",
    "fun",
    "shell",
    "terminal",
]
categories = ["command-line-utilities"]
exclude =   [
    ".github",
]

[dependencies]
anyhow = "1.0.38"
serde = { version = "1.0.124", features = ["derive"] }
clap = { version = "3.0.0-beta.2", features = ["color"] }
directories = "3.0.1"
config = "0.10.1"
lazy_static = "1.4.0"
reqwest = { version = "0.11.2", features = ["blocking", "json"] }
ajson = "0.2.4"
serde_json = "1.0.64"
chrono = { version = "0.4.19", features = ["serde"] }
rand = "0.8.3"
colored = "2.0.0"
retry = "1.2.0"
